Run the Vector API engines at twenty million, and lose the tie
`shard` won ten million in Set A and had never been run at twenty; only
`turbo` had. Running all four Java byte-level engines there reverses the
finding this README has carried since the ten-million table:

| | Vector API | SWAR | |
|---|---|---|---|
| 10M, all cores | `shard` 25.33s | `turbo` 25.41s | tie -- 0.3% |
| 10M, one thread | `mmap` 31.52s | `swar` 32.60s | Vector by 3% |
| 20M, all cores | `shard` 96.26s | `turbo` 80.59s | SWAR by 19% |
| 20M, one thread | `mmap` 119.53s | `swar` 106.91s | SWAR by 12% |

At ten million, 0.3% on single runs on shared runners was noise and the
one-thread pairing pointed the other way, so "the two techniques cost the
same" was the honest reading. At twenty million, best of two on an idle
machine, SWAR wins both pairings by margins well outside the run-to-run
spread. That spread is now measured rather than assumed: `turbo` with and
without the vector module on the classpath differs by 5% (80.59s against
84.87s), a difference it cannot causally have, since `turbo` never calls the
Vector API.

Why it reverses is not established -- scale and host both changed between the
two pairs of rows -- so that is added to the open questions rather than
explained away. What it settles is that the engine shipping as the default is
the right one at the largest size tested, which the Set B table now says
explicitly instead of leaving "Java 26 turbo" to be read as an arbitrary pick.

Two things fall out that were not the point. Four cores buy 1.33x on the SWAR
pairing and 1.24x on the Vector one -- far short of the core count, because
the scan is bound by memory bandwidth rather than instruction throughput. And
the single-threaded engines finish in about 470 MB less, which is the
per-thread index and scratch structures the parallel ones allocate.

All four agree with the C, C++, Zig and Rust ports exactly:
changed 1,197,876, added 20,000, removed 20,000.

Co-Authored-By: Claude Opus